test/negative/static_toplevel.mut
# Negative: static variable at top level (only allowed inside functions)
static x: i64 = 0
